# Linux-Project

./: .dockerfile  README.md  dataprocess.py  dockerfile  execution.sh  fetch_data.sh  get_current_movies.py  get_current_movies.sh  launch_all.sh  launch_app.sh  launch_v2.sh  main.py  movies.csv  pyproject.toml  setup.sh  stop_all.sh  v1.py  v2.py
.github/workflows/: run-script.yml
data/: AAPL.json  MSFT.json  TSLA.json
extracted_data/: all_movies.json  movies.json
extracted_data/current_movies/: current_movies.csv  movies.json
extraction/: fetch_data.sh
streamlit/: app.py  app_v1.py  app_v2.py  v2.py
